# mcp_pdf_processor

./: .gitignore  README.md  pdf_tool_server.py  pyproject.toml
src/mcp_pdf_processor/: __init__.py  __main__.py  api.py  math_utils.py  mcp_server.py  server.py
